Revision history for {{$dist->name}}

{{$NEXT}}

0.001000_04 2010-04-27 13:29:14 CST6CDT
       - schema_version is now an attr so that users can more easily force the
         version of the schema
       - add prepare_install method which installs everything as well as the
         version storage

0.001000_03 2010-04-20 23:19:36 CST6CDT
       - bump File::Path dep

0.001000_02 2010-04-19 18:46:16 CST6CDT
       - add autodie as dep

0.001000_01
       - initial dev release