@@ -2,7 +2,7 @@ name             = DBIx-Class-DeploymentHandler
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 0.001000_04
+version          = 0.001000_05
 
 [@Git]
 [@Filter]
