@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - put schema_version attr in more places
 
 0.001000_04 2010-04-27 13:29:14 CST6CDT
        - schema_version is now an attr so that users can more easily force the
